--- a/app/Resources/FOSUserBundle/views/ChangePassword/change_password.html.twig
+++ b/app/Resources/FOSUserBundle/views/ChangePassword/change_password.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block menu %}
     {{ parent() }}
-    <h1 class="titre_form"> Modification du profil </h1>
+    <h1 class="titre_form"> Modification du mot de passe </h1>
 <hr align="left" class="séparateur">
 {% endblock %}
 {% block body %}
@@ -13,25 +13,27 @@
             <div class="col-md-3">
                 {{ parent() }}
             </div>
+
             {% trans_default_domain 'FOSUserBundle' %}
-             <div class="col-md-7 col-push-5">
-                <form id="profileForm" action="{{ path('fos_user_profile_edit') }}" method="POST" class="fos_user_profile_edit">
+            <div class="col-md-7 col-push-5">
+                <form id="profileForm" action="{{ path('fos_user_change_password') }}" method="POST" class="fos_user_change_password">
                     <table>
-                        <tr>
-                            <td> {{ form_label (form.username) }} </td>
-                            <td> {{ form_widget (form.username) }} </td>
-                        </tr>
-                        <tr>
-                            <td> {{ form_label (form.email) }} </td>
-                            <td> {{ form_widget (form.email) }} </td>
-                        </tr>
                         <tr>
                             <td> {{ form_label (form.current_password) }} </td>
                             <td> {{ form_widget (form.current_password) }} </td>
                         </tr>
+                        <tr>
+                            <td> {{ form_label (form.plainPassword['first']) }} </td>
+                            <td> {{ form_widget (form.plainPassword['first']) }} </td>
+                        </tr>
+                        <tr>
+                            <td> {{ form_label (form.plainPassword['second']) }} </td>
+                            <td> {{ form_widget (form.plainPassword['second']) }} </td>
+                        </tr>
+
                     </table>
                     <div>
-                        <button type="submit" value="{{ 'profile.edit.submit'|trans }}" />{{ 'profile.edit.submit'|trans }} </button>
+                        <button type="submit" value="{{ 'change_password.submit'|trans }}" />{{ 'change_password.submit'|trans }} </button>
                     </div>
                     {{ form_rest(form) }}
                     {{ form_end(form) }}
