--- a/app/Resources/FOSUserBundle/views/ChangePassword/change_password.html.twig
+++ b/app/Resources/FOSUserBundle/views/ChangePassword/change_password.html.twig
@@ -16,6 +16,11 @@
 
             {% trans_default_domain 'FOSUserBundle' %}
             <div class="col-md-7 col-push-5">
+                {% for message in app.flashes('password') %}
+                    <div class="flash-register">
+                        <p> {{ message }} <p>
+                    </div>
+                {% endfor %}
                 <form id="profileForm" action="{{ path('fos_user_change_password') }}" method="POST" class="fos_user_change_password">
                     <table>
                         <tr>
@@ -37,6 +42,10 @@
                     </div>
                     {{ form_rest(form) }}
                     {{ form_end(form) }}
+                    <ul class="error">
+                        <li>{{ form_errors(form.current_password) }} </li>
+                        <li>{{ form_errors(form.plainPassword['first']) }}</li>
+                    </ul>
                 </form>
             </div>
         </div>
