--- a/app/Resources/FOSUserBundle/views/Profile/edit.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/edit.html.twig
@@ -35,6 +35,9 @@
                     </div>
                     {{ form_rest(form) }}
                     {{ form_end(form) }}
+                    <ul class="error">
+                        <li>{{ form_errors(form.current_password) }} </li>
+                    </ul>
                 </form>
             </div>
         </div>
