--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -1,6 +1,6 @@
 {% block body %}
     {% block stylesheets %}
-            <link rel="stylesheet" type="text/css" href="{{asset('css/main_1.css')}}" />
+
             <link rel="icon" type="image/png" href="{{asset('images/icons/favicon.ico')}}"/>
             <link rel="stylesheet" type="text/css" href="{{asset('css/bootstrap.min.css')}}">
             <link rel="stylesheet" type="text/css" href="{{asset('css/fonts/font-awesome-4.7.0/css/font-awesome.min.css')}}">
@@ -10,12 +10,11 @@
             <link rel="stylesheet" type="text/css" href="{{asset('css/vendor/select2/select2.min.css')}}">
             <link rel="stylesheet" type="text/css" href="{{asset('css/util.css')}}">
     {#        <link rel="stylesheet" type="text/css" href="{{asset('css/main.css')}}" />#}
-
+            <link rel="stylesheet" type="text/css" href="{{asset('css/main_1.css')}}" />
     {% endblock %}
     {% block content %}
 
         {% block fos_user_content %}
-
             {% if error %}
                 <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
             {% endif %}
@@ -26,7 +25,6 @@
                         {% if error %}
                             <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                         {% endif %}
-
                         <form class="login100-form validate-form" action="{{path("fos_user_security_check")}}" method="post">
                                 {% if csrf_token %}
                                     <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
@@ -34,6 +32,11 @@
 
                             <span class="login100-form-title p-b-55">
                                 <img id="logo" src="{{asset('images/logo.png')}}" >
+                                {% for message in app.flashes('notice') %}
+                                    <div class="flash-notice">
+                                        <p>{{ message }}</p>
+                                    </div>
+                                {% endfor %}
                                 <label id="login_label" for="username">{{ "Connexion"|trans }}</label>
                             </span>
                             <div class="wrap-input100 validate-input m-b-16">
@@ -47,17 +50,18 @@
                                 <input class="input100" type="password" id="password" name="_password" required="required" autocomplete="current-password" placeholder="Mot de passe"/>
                                 {#<label for="password">Password:</label>#}
                                 <span class="focus-input100"></span>
-                                    <span class="symbol-input100">
-                                        <span class="lnr lnr-lock"></span>
-                                    </span>
+                                <span class="symbol-input100">
+                                    <span class="lnr lnr-lock"></span>
+                                </span>
                             </div>
                             <input type="hidden" name="_csrf_token"
                             value="{{ csrf_token('authenticate') }}"
                             >
 
                             <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-                            <label for="remember_me">{{ 'Remember me'|trans }}</label>
+                            <label for="remember_me">{{ 'Se souvenir de moi'|trans }}</label>
 
+                            <a id="forgotPassword" href="{{ path('fos_user_resetting_request') }}"> Mot de passe oublié ?</a>
 
                             <div class="container-login100-form-btn p-t-25">
                                 <input class="login100-form-btn" type="submit" id="_submit" name="_submit" value="{{ 'Connexion'|trans }}" />
