--- a/app/Resources/views/Templates/Departments/departmentDetails.html.twig
+++ b/app/Resources/views/Templates/Departments/departmentDetails.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block menu %}
     {{ parent() }}
-    <h1 class="titre_form"> {% if brand is not null %} Les départements de {{brand.getName()}} {% endif %} </h1>
+    <h1 class="titre_form"> {% if app.session.get('choosenBrand') is not null %} Les départements de {{app.session.get('choosenBrand').getName()}} {% endif %} </h1>
     <hr align="left" class="séparateur">
 
 {% endblock %}
@@ -45,10 +45,10 @@
             <div id="formButton">
                 {{ form_widget(form.save) }}
                 <button type="button" id="backButton" onclick="document.location.replace('{{path('departments')}}');"> Retour</button>
-                <a class="fas fa-eye" href ='{{brand.getUrl()}}constructeur_maison?code={{ department.getCode()}}' target="_blank"></a>
+                <a class="fas fa-eye" href ='{{app.session.get('choosenBrand').getUrl()}}constructeur_maison?code={{ department.getCode()}}' target="_blank"></a>
             </div>
 
-{{ form_rest(form) }}
+            {{ form_rest(form) }}
             {{ form_end(form) }}
 
         </form>
