--- a/app/Resources/views/Templates/Index/index.html.twig
+++ b/app/Resources/views/Templates/Index/index.html.twig
@@ -10,8 +10,8 @@
 {% endblock %}
 
 {% block body %}
-    {% if brand is not null %}
-        <h1 class="titre_form"> Vous travaillez sur {{brand.getName()}} </h1>
+    {% if app.session.get('choosenBrand') is not null %}
+        <h1 class="titre_form"> Vous travaillez sur {{app.session.get('choosenBrand').getName()}} </h1>
     {% else %}
         <h1 class="titre_form"> Choisissez une marque.</h1>
     {% endif %}
