--- a/app/Resources/views/Templates/Models/modelsManagement.html.twig
+++ b/app/Resources/views/Templates/Models/modelsManagement.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block menu %}
     {{ parent() }}
-    <h1 class="titre_form"> {% if brand is not null %} Les réalisations de {{brand.getName()}} {% endif %} </h1>
+    <h1 class="titre_form"> {% if app.session.get('choosenBrand') is not null %} Les réalisations de {{app.session.get('choosenBrand').getName()}} {% endif %} </h1>
 <hr align="left" class="séparateur">
 {% endblock %}
 {% block body %}
@@ -41,7 +41,7 @@
                             </td>
                             <td> {{model.getProperties()}} </td>
                             <td>
-                                <a class="fas fa-eye" href ='{{brand.getUrl()}}/models/details/?id={{model.getId()}}' target="_blank"></a>
+                                <a class="fas fa-eye" href ='{{app.session.get('choosenBrand').getUrl()}}/models/details/?id={{model.getId()}}' target="_blank"></a>
                                 <a class="fas fa-edit" href='{{path('modelDetails',{'modelIdSlug':model.getId()})}}'></a>
                                 <button class="fas fa-times-circle" onclick="if (confirm('Etes vous sur de vouloir supprimer cette réalisation ?')){ document.location.href ='{{path('modelRemove',{'modelId':model.getId()})}}'; }"></button>
                             </td>
