--- a/app/Resources/views/Templates/Reviews/reviewsManagement.html.twig
+++ b/app/Resources/views/Templates/Reviews/reviewsManagement.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block menu %}
     {{ parent() }}
-    <h1 class="titre_form"> {% if brand is not null %} Les avis {{brand.getName()}} {% endif %} </h1>
+    <h1 class="titre_form"> {% if app.session.get('choosenBrand') is not null %} Les avis {{app.session.get('choosenBrand').getName()}} {% endif %} </h1>
 <hr align="left" class="séparateur">
 {% endblock %}
 {% block body %}
@@ -34,17 +34,17 @@
                             </td>
                             <td> {{ review.getWho() }} </td>
                             <td>
-                                {% set url1 = 'http://localhost/'~brand.getDir()~'/img/reviews/'~review.getImage1() %}
+                                {% set url1 = 'http://localhost/'~app.session.get('choosenBrand').getDir()~'/img/reviews/'~review.getImage1() %}
                                 <img src={{url1}} alt='{{review.getImage1()}}'>
                             </td>
                             <td>
-                                {% set url2 = 'http://localhost/'~brand.getDir()~'/img/reviews/'~review.getImage2() %}
+                                {% set url2 = 'http://localhost/'~app.session.get('choosenBrand').getDir()~'/img/reviews/'~review.getImage2() %}
                                 <img src={{url2}} alt='{{review.getImage2()}}'>
                             </td>
                             <td> {{review.getDate().date|date("d-m-Y")}} </td>
                             <td> {{ review.getMark() }} </td>
                             <td>
-                                <a class="fas fa-eye" href ='{{brand.getUrl()}}/reviews/main' target="_blank"></a>
+                                <a class="fas fa-eye" href ='{{app.session.get('choosenBrand').getUrl()}}/reviews/main' target="_blank"></a>
                                 <a class="fas fa-edit" href='{{path('reviewDetails',{'reviewIdSlug':review.getId()})}}'></a>
                                 <button class="fas fa-times-circle" onclick="if (confirm('Etes vous sur de vouloir supprimer cet avis ?')){ document.location.href ='{{path('reviewRemove',{'reviewId':review.getId()})}}'; }"></button>
                             </td>
