--- a/web/css/main.css
+++ b/web/css/main.css
@@ -281,6 +281,36 @@ button
     margin-left: 7em;
 }
 
+#error404 {
+    text-align: center;
+    font-size: 2em;
+    background-image: url('/administration/web/images/gangDePigeon1.jpg');
+    max-width:100%;
+    width: 100%;
+    height: 30em;
+    background-size:  100%;
+    background-repeat:no-repeat;
+}
+
+#error403 {
+    text-align: center;
+    font-size: 2em;
+    background-image: url('/administration/web/images/kangourou.jpg');
+    max-width:100%;
+    width: 100%;
+    height: 30em;
+    background-size:  100%;
+    background-repeat:no-repeat;
+}
+
+#error {
+    font-size: 4em;
+    text-align: center;
+    margin-top: -3em;
+    color: white;
+    margin-left: 3em;
+}
+
 #formButton
 {
     /*display: inline-block;*/
