--- a/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -52,7 +52,7 @@
                     {{ form_rest(form) }}
                     {{ form_end(form) }}
                     <ul class="error">
-                        <li>{{ form_errors(form.plainPassword['first']) }} </li>
+                        <li>{{ form_errors(form) }} </li>
                     </ul>
                 </form>
             </div>
