--- a/app/Resources/FOSUserBundle/views/Profile/show.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show.html.twig
@@ -1,26 +1,32 @@
 {% extends 'Templates/baseSubMenu.html.twig' %}
+{% set route = app.request.headers.get('referer')|split('/')|last %}
 {% block stylesheets %}
         <link rel="stylesheet" type="text/css" href="{{asset('css/main.css')}}" />
 {% endblock %}
 {% block menu %}
     {{ parent() }}
-    <h1 class="titre_form"> Modification du profil </h1>
+    {{route}}
+    {% if route is same as('edit') %}
+        <h1 class="titre_form"> Modification du profil </h1>
+    {% else %}
+        <h1 class="titre_form"> Modification du mot de passe </h1>
+    {% endif %}
 <hr align="left" class="séparateur">
 {% endblock %}
 {% block body %}
+
     <div class="container">
         <div class="row">
             <div class="col-md-3">
                 {{ parent() }}
             </div>
-            {% for message in app.flashes('password') %}
-                    <div class="flash-register">
-                        <p> {{ message }} <p>
-                    </div>
-                {% endfor %}
             {% trans_default_domain 'FOSUserBundle' %}
              <div class="col-md-7 col-push-5">
-              fezfzef
+                 {% if route is same as('edit') %}
+                    <p class="flash"> Votre profil a bien été modifié ! </p>
+                {% else %}
+                    <p class="flash"> Votre mot de passe a bien été modifié ! </p>
+                {% endif %}
             </div>
         </div>
     </div>
