--- a/app/Resources/TwigBundle/Views/Exception/error403.html.twig
+++ b/app/Resources/TwigBundle/Views/Exception/error403.html.twig
@@ -1,19 +1,19 @@
 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-    {% extends 'Templates/base.html.twig' %}
     {% block menu %}
-                {{parent()}}
+{#                {{parent()}}#}
+<link rel="stylesheet" type="text/css" href="{{asset('css/main.css')}}" />
 {#                <h1 class="titre_form">Page not found</h1>#}
             </div>
         </section>
     {% endblock %}
     {% block body %}
-        <div class="row">
-            <div class="col-sm-12">
+    {#    <div class="row">
+            <div class="col-sm-12">#}
                 <p id="error403">
-                    La page demandée n'a pas pu être localisée. </br>
-                    Vérifiez les fautes d'ortographes dans l'URL ou <a href="{{ path('index') }}"><b>retournez à la page d'accueil</b></a>. </p>
+                    Vous n'avez pas les autorisations pour accéder à cette page. </br>
+                    <a href="{{ path('index') }}"><b>retournez à la page d'accueil</b></a>. </p>
                 <p id="error"> Erreur 403 </p>
-            </div>
-        </div>
+        {#    </div>
+        </div>#}
     {% endblock %}
 {% endif %}
