--- a/web/css/main.css
+++ b/web/css/main.css
@@ -60,10 +60,10 @@ h1 {
     text-align: center;
 }
 
-.flash-register p{
+.flash {
     text-align: center;
     color: green;
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 /*.col-md-9 h1
@@ -287,7 +287,7 @@ button
     background-image: url('/administration/web/images/gangDePigeon1.jpg');
     max-width:100%;
     width: 100%;
-    height: 30em;
+    height: 665px;
     background-size:  100%;
     background-repeat:no-repeat;
 }
@@ -298,17 +298,22 @@ button
     background-image: url('/administration/web/images/kangourou.jpg');
     max-width:100%;
     width: 100%;
-    height: 30em;
+    height: 665px;
+    color: white;
     background-size:  100%;
     background-repeat:no-repeat;
+}
+
+#error403 a {
+    color: white;
 }
 
 #error {
     font-size: 4em;
     text-align: center;
-    margin-top: -3em;
+    margin-top: -2.5em;
     color: white;
-    margin-left: 3em;
+    margin-left: 7em;
 }
 
 #formButton
