--- a/app/Resources/views/Templates/Agencies/agencyDetails.html.twig
+++ b/app/Resources/views/Templates/Agencies/agencyDetails.html.twig
@@ -6,129 +6,73 @@
     {{ parent() }}
     <h1 class="titre_form"> {% if app.session.get('choosenBrand') is not null %} Les agences {{app.session.get('choosenBrand').getName()}} {% endif %} </h1>
     <hr align="left" class="séparateur">
-
 {% endblock %}
-
 {% block body %}
-<div class="row">
-    <div class="col-sm-12">
-        <form method="POST" enctype="multipart/form-data">
-            <table id="formTab">
-                <tr>
-                    <td>
-                        {{ form_label (form.latitude) }}
-                    </td>
-                    <td>
-                        {{ form_widget (form.latitude) }}
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        {{ form_label (form.longitude) }}
-                    </td>
-                    <td>
-                        {{ form_widget (form.longitude) }}
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        {{ form_label (form.name) }}
-                    </td>
-                    <td>
-                        {{ form_widget (form.name) }}
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        {{ form_label (form.zip_code) }}
-                    </td>
-                    <td>
-                        {{ form_widget (form.zip_code) }}
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        {{ form_label (form.city) }}
-                    </td>
-                    <td>
-                        {{ form_widget (form.city) }}
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        {{ form_label (form.department_code) }}
-                    </td>
-                    <td>
-                        {{ form_widget (form.department_code) }}
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        {{ form_label (form.address) }}
-                    </td>
-                    <td>
-                        {{ form_widget (form.address) }}
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        {{ form_label (form.phoneNumber) }}
-                    </td>
-                    <td>
-                        {{ form_widget (form.phoneNumber) }}
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        {{ form_label (form.email) }}
-                    </td>
-                    <td>
-                        {{ form_widget (form.email) }}
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        {{ form_label (form.schedule) }}
-                    </td>
-                    <td>
-                        {{ form_widget (form.schedule) }}
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        {{ form_label (form.next_to) }}
-                    </td>
-                    <td>
-                        {{ form_widget (form.next_to) }}
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        {{ form_label (form.caption) }}
-                    </td>
-                    <td>
-                        {{ form_widget (form.caption) }}
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        {{ form_label (form.description) }}
-                    </td>
-                    <td>
-                        {{ form_widget (form.description) }}
-                    </td>
-                </tr>
-            </table>
-            <div id="formButton">
-                {{ form_widget(form.save) }}
-                <button type="button" id="backButton" onclick="document.location.replace('{{path('agencies')}}');"> Retour</button>
-            </div>
-            {{ form_rest(form) }}
-            {{ form_end(form) }}
-        </form>
-
-
+    <div class="row">
+        <div class="col-sm-12">
+            <form method="POST" enctype="multipart/form-data">
+                <table id="formTab">
+                    <tr>
+                        <td> {{ form_label (form.latitude) }} </td>
+                        <td> {{ form_widget (form.latitude) }} </td>
+                    </tr>
+                    <tr>
+                        <td> {{ form_label (form.longitude) }} </td>
+                        <td> {{ form_widget (form.longitude) }} </td>
+                    </tr>
+                    <tr>
+                        <td> {{ form_label (form.name) }} </td>
+                        <td> {{ form_widget (form.name) }} </td>
+                    </tr>
+                    <tr>
+                        <td> {{ form_label (form.zip_code) }} </td>
+                        <td> {{ form_widget (form.zip_code) }} </td>
+                    </tr>
+                    <tr>
+                        <td> {{ form_label (form.city) }} </td>
+                        <td> {{ form_widget (form.city) }} </td>
+                    </tr>
+                    <tr>
+                        <td> {{ form_label (form.department_code) }} </td>
+                        <td> {{ form_widget (form.department_code) }} </td>
+                    </tr>
+                    <tr>
+                        <td> {{ form_label (form.address) }} </td>
+                        <td> {{ form_widget (form.address) }} </td>
+                    </tr>
+                    <tr>
+                        <td> {{ form_label (form.phoneNumber) }} </td>
+                        <td> {{ form_widget (form.phoneNumber) }} </td>
+                    </tr>
+                    <tr>
+                        <td> {{ form_label (form.email) }} </td>
+                        <td> {{ form_widget (form.email) }} </td>
+                    </tr>
+                    <tr>
+                        <td> {{ form_label (form.schedule) }} </td>
+                        <td> {{ form_widget (form.schedule) }} </td>
+                    </tr>
+                    <tr>
+                        <td> {{ form_label (form.next_to) }} </td>
+                        <td> {{ form_widget (form.next_to) }} </td>
+                    </tr>
+                    <tr>
+                        <td> {{ form_label (form.caption) }} </td>
+                        <td> {{ form_widget (form.caption) }} </td>
+                    </tr>
+                    <tr>
+                        <td> {{ form_label (form.description) }} </td>
+                        <td> {{ form_widget (form.description) }} </td>
+                    </tr>
+                </table>
+                <div id="formButton">
+                    {{ form_widget(form.save) }}
+                    <button type="button" id="backButton" onclick="document.location.replace('{{path('agencies')}}');"> Retour</button>
+                </div>
+                {{ form_rest(form) }}
+                {{ form_end(form) }}
+            </form>
+        </div>
     </div>
-</div>
 {% endblock %}
 
