--- a/app/Resources/views/email/password_resetting.email.twig
+++ b/app/Resources/views/email/password_resetting.email.twig
@@ -1,14 +1,14 @@
 {% block subject %} Changement de mot de passe {% endblock %}
-
 {% block body_text %}
 {% autoescape false %}
-Bonjour {{ user.username }} !
+    Bonjour {{ user.username }} !
 
-Vous pouvez changer de mot de passe en cliquant sur ce lien : {{ confirmationUrl }}
+    Vous pouvez changer de mot de passe en cliquant sur ce lien : {{ confirmationUrl }}
 
-Cordialement,
+    Cordialement,
 
-L'équipe du site d'administration.
+    L'équipe du site d'administration.
+    <img src="{{asset('images/logo.png')}}" alt='logo'>
 {% endautoescape %}
 {% endblock %}
 
